logout and swagger
